# Layton-PC

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  Layton PC.sln  Layton PC.vcxproj  Layton PC.vcxproj.filters  README.md
.github/workflows/: build.yml
cmake/toolchains/: linux-arm64.cmake  linux-x64.cmake  windows-arm64.cmake  windows-x64.cmake
dependencies/: createSymLink.sh
dependencies/FFmpeg_lgpl/include/libavutil/: ffversion.h
dependencies/FFmpeg_lgpl/lib/linux_arm64/: libswresample.so.6.4.100
dependencies/FFmpeg_lgpl/lib/linux_arm64/pkgconfig/: libavdevice.pc
dependencies/FFmpeg_lgpl/lib/linux_x64/: libswresample.so.6.4.100
dependencies/FFmpeg_lgpl/lib/linux_x64/pkgconfig/: libavfilter.pc
dependencies/FFmpeg_lgpl/lib/win_amd64/pkgconfig/: libavdevice.pc
dependencies/FFmpeg_lgpl/lib/win_arm64/: avformat.lib
dependencies/FFmpeg_lgpl/lib/win_arm64/pkgconfig/: libavformat.pc
dependencies/FFmpeg_lgpl/lib/win_x64/pkgconfig/: libavfilter.pc
dependencies/FFmpeg_lgpl/lib/windows_arm64/: avutil.lib
dependencies/FFmpeg_lgpl/lib/windows_arm64/pkgconfig/: libavcodec.pc
dependencies/FFmpeg_lgpl/lib/windows_x64/pkgconfig/: libavformat.pc
dependencies/SDL3/lib/linux_x64/: libSDL3.so.0.4.8
dependencies/SDL3_image/lib/linux_x64/: libSDL3_image.so.0  libSDL3_image.so.0.4.4
include/: Game.h
include/FileFormat/: ARC.h  BG.h  LPCK.h  LZSS.h
include/FileFormat/Compression/: Huffman.h  LZSS.h  RLE.h
include/FileFormat/Conversion/: ARJ.h  Anim.h  BG.h  BGX.h  Converter.h  GFX.h  LPCK.h  MID.h  MODS.h  NFTR.h  SADL.h  SDAT.h
include/Game/: Game.h  Layton1.h  Save.h  Scene.h  Sprite.h
include/Game/Layton1/: Layton1.h  Layton1Save.h
include/Game/Layton1/Scene/: Cinematic.h  CreateSave.h  Intro.h  IntroCarDialogue1.h  IntroCarDialogue2.h  Scenes.h  StMystereEntry.h  TitleDrop.h  TitleScreen.h
include/Game/Layton1/Scene/Cinematic/: IntroCinematic.h
include/Game/Layton1/Scene/Map/: DrawBridge.h  Map.h  Maps.h
include/Game/Layton1/Scene/Puzzle/: Puzzle.h  Puzzle1.h  Puzzle2.h  Puzzles.h
include/Game/Scene/: Cinematic.h  Dialogue.h  Scene.h
include/Game/Scene/Layton1/: TitleScreen.h
include/Game/Sprite/: AnimatedSprite.h  CharSprite.h  ClickableSprite.h  FadingSprite.h  ParallaxSprite.h  Sprite.h  SpriteSheet.h  TextSprite.h
include/Game/Text/: Text.h
include/Utils/: FileUtils.h  FolderUtils.h  SdlUtils.h  StringUtils.h  stb_image_write.h
licenses/: sdatxtract  vgmtrans
source/: Game.cpp  LaytonPC.cpp
source/FileFormat/: ARC.cpp  BG.cpp  LPCK.cpp  LZSS.cpp
source/FileFormat/Compression/: Huffman.cpp  LZSS.cpp  RLE.cpp
source/FileFormat/Conversion/: ARJ.cpp  Anim.cpp  BG.cpp  BGX.cpp  Converter.cpp  GFX.cpp  LPCK.cpp  MID.cpp  MODS.cpp  NFTR.cpp  SADL.cpp  SDAT.cpp
source/FileFormat/Custom/: Anim.cpp
source/Game/: Game.cpp  Layton1.cpp  Save.cpp  Scene.cpp  Sprite.cpp
source/Game/Layton1/: Layton1.cpp  Layton1Save.cpp
source/Game/Layton1/Scene/: Cinematic.cpp  CreateSave.cpp  Intro.cpp  IntroCarDialogue1.cpp  IntroCarDialogue2.cpp  StMystereEntry.cpp  TitleDrop.cpp  TitleScreen.cpp
source/Game/Layton1/Scene/Cinematic/: IntroCinematic.cpp
source/Game/Layton1/Scene/Map/: DrawBridge.cpp  Map.cpp
source/Game/Layton1/Scene/Puzzle/: Puzzle.cpp  Puzzle1.cpp  Puzzle2.cpp
source/Game/Scene/: Cinematic.cpp  Dialogue.cpp  Scene.cpp
source/Game/Scene/Layton1/: TitleScreen.cpp
source/Game/Sprite/: AnimatedSprite.cpp  CharSprite.cpp  ClickableSprite.cpp  FadingSprite.cpp  ParallaxSprite.cpp  Sprite.cpp  SpriteSheet.cpp  TextSprite.cpp
source/Game/Text/: Text.cpp
source/Utils/: FileUtils.cpp  FolderUtils.cpp  SdlUtils.cpp  StringUtils.cpp  sdlUtils.cpp
